--- a/TRAINER/my-first-web-part/src/webparts/typeScriptVn/template.html
+++ b/TRAINER/my-first-web-part/src/webparts/typeScriptVn/template.html
@@ -1,73 +1,74 @@
 <h2>
     Syntax einer Funktion
 </h2>
-<p>
+<pre>
     function fnName() {}
-</p>
+</pre>
 <hr>
 <h2>
     Syntax einer Klasse
 </h2>
-<p>
+<pre>
     class className {}
-</p>
+</pre>
 <hr>
 <h2>
     Syntax einer Klasse mit Members (Props & Methods)
 </h2>
-<p>
+<pre>
     class className {
     propName : propType;
     methodName () : returnType {};
     }
-</p>
+</pre>
 <hr>
 <h2>
     Syntax von einem Objekt
 </h2>
-<p>
+<pre>
     {
     keyName : value,
     methodName () : returnType {}
     }
-</p>
+</pre>
 <hr>
 <h2>
     Syntax von einem Array
 </h2>
-<p>
+<pre>
     [element1, element2, element3]
-</p>
+</pre>
 <hr>
 <h2>
     Syntax von einer generischen Klasse
 </h2>
-<p>
+<pre>
     class className&#60typeName&#62 {}
-</p>
+</pre>
 <hr>
 <h2>
     Syntax von einem Interface
 </h2>
-<p>
+<pre>
     interface interfaceName {
     key1Name: key1Type;
     key2Name: key2Type;
     }
-</p>
+</pre>
 <hr>
 <h2>Union Type</h2>
-<p>
+<pre>
     let variableName: string | number;
-</p>
+</pre>
 <hr>
-<p>
+<pre>
+    <h2>Syntax einer Pfeilfunktion</h2>
     <em>anonyme Pfeilfunktion</em>
     (): string => {
         return 'Pfeilfunktion mit keinen Argumenten und einem string-return';
       }
       <em>benannte Pfeilfunktion</em>
-      let fnName(): string => {
+      let fnName = (): string => {
         return 'Pfeilfunktion mit keinen Argumenten und einem string-return';
       }
-</p>
+</pre>
